testbed/test/cruise/compiler/expected/Trait.txt
Trait.ump:11: error: incompatible types: unexpected return value
    return color;
           ^
1 error